# libozf

./: .gitignore  CMakeLists.txt  README.md  libozf.pc.in
src/: CMakeLists.txt  image_parameters.h  index.cpp  index.h  ozf_stream.cpp  ozf_stream.h  scale.h  tile_index.h
src/cmake/: install_headers.cmake
src/details/: ozf_stream_impl.cpp  ozf_stream_impl.h
src/details/utils/: decode.cpp  decode.h  decompress.cpp  decompress.h
src/exceptions/: exception.h  unsupported_exception.h
test_data/maps/: test_32bit.ozf4
test_data/tiles/ozf2/: 0-19-67.pix  0-47-38.pix  0-56-44.pix  0.pal  1-14-19.pix  1-5-9.pix  1.pal
test_data/tiles/ozf4_32bit/: 0.pal  1-11-6.pix  1-7-14.pix  1.pal
test_data/tiles/ozfx3/: 0-22-56.pix  0-40-37.pix  0.pal  1-13-12.pix  1-9-17.pix  1.pal
tests/: CMakeLists.txt  test_utils.cpp  test_utils.h
tests/details/: t_ozf_encrypted_stream.cpp  t_ozf_raw_stream.cpp
tests/details/utils/: t_decode.cpp  t_decompress.cpp
